# advent22

./: Cargo.toml
src/: day01.rs  day02.rs  day03.rs  lib.rs  main.rs
src/toolbox/: bits_iterator.rs  mod.rs  parse.rs  point.rs
