[package]
name = "advent22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"
regex = "*"
itertools = "*"
ansi_term = "0.12.1"
functools = { git = "https://github.com/MahmoudFarouq/functools-rs" }